@@ -268,20 +268,14 @@ namespace GtkSharp.Generation {
 			sw.WriteLine("\t\t\t\tif (value.Method.GetCustomAttributes(typeof(GLib.ConnectBeforeAttribute), false).Length > 0) {");
 			sw.WriteLine("\t\t\t\t\tif (BeforeHandlers[" + cname + "] == null)");
 			sw.Write("\t\t\t\t\t\tBeforeSignals[" + cname + "] = new " + qual_marsh);
-			sw.Write("(this, " + cname + ", value, System.Type.GetType(\"" + EventArgsQualifiedName);
-			if (EventArgsQualifiedName != "System.EventArgs")
-				sw.Write("," + gen_info.AssemblyName);
-			sw.WriteLine("\"), 0);");
+			sw.Write("(this, " + cname + ", value, typeof (" + EventArgsQualifiedName + "), 0);");
 			sw.WriteLine("\t\t\t\t\telse");
 			sw.WriteLine("\t\t\t\t\t\t((GLib.SignalCallback) BeforeSignals [{0}]).AddDelegate (value);", cname);
 			sw.WriteLine("\t\t\t\t\tBeforeHandlers.AddHandler(" + cname + ", value);");
 			sw.WriteLine("\t\t\t\t} else {");
 			sw.WriteLine("\t\t\t\t\tif (AfterHandlers[" + cname + "] == null)");
 			sw.Write("\t\t\t\t\t\tAfterSignals[" + cname + "] = new " + qual_marsh);
-			sw.Write("(this, " + cname + ", value, System.Type.GetType(\"" + EventArgsQualifiedName);
-			if (EventArgsQualifiedName != "System.EventArgs")
-				sw.Write("," + gen_info.AssemblyName);
-			sw.WriteLine("\"), 1);");
+			sw.Write("(this, " + cname + ", value, typeof (" + EventArgsQualifiedName + "), 1);");
 			sw.WriteLine("\t\t\t\t\telse");
 			sw.WriteLine("\t\t\t\t\t\t((GLib.SignalCallback) AfterSignals [{0}]).AddDelegate (value);", cname);
 			sw.WriteLine("\t\t\t\t\tAfterHandlers.AddHandler(" + cname + ", value);");
