@@ -1,3 +1,12 @@
+2004-08-25  Mike Kestner  <mkestner@ximian.com>
+
+	* generator/Signal.cs : use typeof instead of Type.GetType to
+	specify the event args type.
+	* glib/ObjectManager.cs : beef up the type lookup code using
+	Assembly.LoadWithPartialName to fix a very popular win32 bug.
+	[Fixes #61139 and friends]  Thanks to John Luke for expert
+	patch testing on win32.
+
 2004-08-25  John Luke  <john.luke@gmail.com>
 
 	* glib/MainLoop.cs: MainLoop implementation by Jeroen
